hide all overflow to prevent jiggling in mobile mode

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,6 +17,7 @@ body {
     font-family: monospace;
     font-size: 16px;
     color: var(--light);
+    overflow: hidden;
 
     background: linear-gradient(
         45deg,
